Work on #71: - Added collapse/expand all - Added “or” and “and” buttons - Added reset button - Minor corrections on ie8 and ie7 (on ie7 it still crashes on dropping a concept, must evaluate further).

--- a/emif/emif/templates/bootstrap_ie_compatibility.css
+++ b/emif/emif/templates/bootstrap_ie_compatibility.css
@@ -22,9 +22,6 @@
 
 .lt-ie8 .boolrelwidget-query-box-outer,
 { 
-    behavior: url({{ STATIC_URL }}js/vendor/display-table.min.htc); 
-    float: left;
-    
 }
 
 .img-rounded{behavior:url({{ STATIC_URL }}js/vendor/PIE.htc)}
